--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <head>
         
         <link rel="stylesheet" href="index.css">
     </head>
@@ -16,6 +16,7 @@
        <button id="startgame-btn" onclick="StartGame()"> START GAME </button>
        <br>
        <button id= "newcards-btn" onclick="NewCards()">NEW CARDS </button>
+       <p id="player-el"> </p>
        <script src="index.js"></script>
     </body>
 </html>
